@@ -1,113 +1,74 @@
 package com.example.cdr.eventsmanagementsystem.Config;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
-
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-
-import org.springframework.security.oauth2.core.DelegatingOAuth2TokenValidator;
-import org.springframework.security.oauth2.core.OAuth2TokenValidator;
 import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.security.oauth2.jwt.JwtDecoder;
-import org.springframework.security.oauth2.jwt.JwtValidators;
 import org.springframework.security.oauth2.jwt.NimbusJwtDecoder;
-
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
 import org.springframework.security.web.SecurityFilterChain;
 
-import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
-@Configuration
 @EnableWebSecurity
-@EnableMethodSecurity(prePostEnabled = true) // make @PreAuthorize work
+@Configuration
+@EnableMethodSecurity
 public class SecurityConfig {
+    @Value("${spring.oauth2.resourceserver.jwt.jwk-set-uri}")
+    private String jwkSetUri;
 
-    // === Main security chain ===
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        return http
-            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            .csrf(csrf -> csrf.disable())
-            .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-            .authorizeHttpRequests(auth -> auth
-                // Let browser CORS preflight pass
-                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-
-                // Swagger for debugging
-                .requestMatchers("/v3/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
-
-                // Protect admin APIs
-                .requestMatchers("/v1/admin/**").hasRole("admin")
-
-                // Everything else requires authentication
-                .anyRequest().authenticated()
-            )
-            .oauth2ResourceServer(oauth -> oauth
-                .jwt(jwt -> jwt
-                    .jwtAuthenticationConverter(jwtAuthenticationConverter())
-                )
-            )
-            .build();
+        http.csrf(t -> t.disable());
+        http.authorizeHttpRequests(authorize -> {
+            authorize.anyRequest().permitAll();
+        });
+        http.oauth2ResourceServer(t ->{
+            t.jwt(configurer -> configurer.jwtAuthenticationConverter(jwtAuthenticationConverter()));
+        });
+        http.sessionManagement(t -> t.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
+        return http.build();
     }
 
-    // === Convert Keycloak realm roles -> Spring ROLE_* ===
+    @Bean
+    public JwtDecoder jwtDecoder() {
+        return NimbusJwtDecoder.withJwkSetUri(jwkSetUri).build();
+    }
+
     @Bean
     public JwtAuthenticationConverter jwtAuthenticationConverter() {
         JwtAuthenticationConverter converter = new JwtAuthenticationConverter();
         converter.setJwtGrantedAuthoritiesConverter(jwt -> {
-            Map<String, Object> realmAccess = jwt.getClaim("realm_access");
-            Object rolesObj = realmAccess == null ? null : realmAccess.get("roles");
-            if (!(rolesObj instanceof List<?> roles)) return List.of();
+            List<String> roles = extractRolesFromRealmAccess(jwt);
             return roles.stream()
-                .filter(String.class::isInstance)
-                .map(String.class::cast)
-                .map(r -> new SimpleGrantedAuthority("ROLE_" + r))
-                .collect(Collectors.toList());
+                    .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
+                    .collect(Collectors.toList());
         });
         return converter;
     }
 
-    // === Option B core: fetch keys from container, but validate issuer as localhost ===
-    @Bean
-    public JwtDecoder jwtDecoder() {
-        // JWK endpoint reachable from INSIDE docker network
-        String jwkSetUri = "http://keycloak:8080/realms/EMS-realm/protocol/openid-connect/certs";
-
-        NimbusJwtDecoder decoder = NimbusJwtDecoder.withJwkSetUri(jwkSetUri).build();
-
-        // Validate the issuer EXACTLY as in the SPA token (browser hits localhost)
-        String expectedIssuer = "http://localhost:8080/realms/EMS-realm";
-        OAuth2TokenValidator<Jwt> withIssuer = JwtValidators.createDefaultWithIssuer(expectedIssuer);
-        OAuth2TokenValidator<Jwt> defaultValidators = JwtValidators.createDefault();
-        decoder.setJwtValidator(new DelegatingOAuth2TokenValidator<>(withIssuer, defaultValidators));
-
-        return decoder;
-    }
-
-    // === CORS for your SPA (CRA: 3000; add 5173 if you ever use Vite) ===
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration cfg = new CorsConfiguration();
-        cfg.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:5173"));
-        cfg.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        cfg.setAllowedHeaders(List.of("Authorization", "Content-Type", "Accept"));
-        cfg.setAllowCredentials(true);
-        cfg.setMaxAge(3600L);
-
-        UrlBasedCorsConfigurationSource src = new UrlBasedCorsConfigurationSource();
-        src.registerCorsConfiguration("/**", cfg);
-        return src;
+    private List<String> extractRolesFromRealmAccess(Jwt jwt) {
+        Map<String, Object> realmAccess = jwt.getClaim("realm_access");
+        if (Objects.isNull(realmAccess) || Objects.isNull(realmAccess.get("roles"))) {
+            return Collections.emptyList();
+        }
+        Object roles = realmAccess.get("roles");
+        if (roles instanceof List<?>) {
+            return ((List<?>) roles).stream()
+                    .filter(String.class::isInstance)
+                    .map(String.class::cast)
+                    .collect(Collectors.toList());
+        }
+        return Collections.emptyList();
     }
 }
